WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116251
[wk2] didGetImageForFindMatch can return a null image
https://bugs.webkit.org/show_bug.cgi?id=116251
Summary
[wk2] didGetImageForFindMatch can return a null image
Tim Horton
Reported
2013-05-16 16:29:21 PDT
FindController::getFindIndicatorBitmapAndRect says: // Selection rect can be empty for matches that are currently obscured from view. And then returns a null handle. Which we then try to create a ShareableBitmap from, and then a WebImage from that. We end up getting a null ShareableBitmap in debug builds, or crashing when trying to use the WebImage in release builds (because m_bitmap is null). We should not didGetImageForFindMatch if we didn't get an image for the find match... <
rdar://problem/13277246
>
Attachments
patch
(1.33 KB, patch)
2013-05-16 16:39 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-05-16 16:39:50 PDT
Created
attachment 201999
[details]
patch
WebKit Commit Bot
Comment 2
2013-05-16 16:41:55 PDT
Attachment 201999
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/WebProcess/WebPage/FindController.cpp']" exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2013-05-16 16:43:40 PDT
Comment on
attachment 201999
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=201999&action=review
> Source/WebKit2/ChangeLog:4 > +
https://bugs.webkit.org/process_bug.cgi
:\
Simon Fraser (smfr)
Comment 4
2013-05-16 16:45:49 PDT
Comment on
attachment 201999
[details]
patch r=me if you fix stuff.
Tim Horton
Comment 5
2013-05-16 16:48:35 PDT
http://trac.webkit.org/changeset/150212
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug