[wk2] didGetImageForFindMatch can return a null image https://bugs.webkit.org/show_bug.cgi?id=116251 <rdar://problem/13277246>

Reviewed by Simon Fraser.

Don't send didGetImageForFindMatch if we didn't get an image for
the find match, which can happen if the selection is not visible.

* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::getImageForFindMatch):


Canonical link: https://commits.webkit.org/134634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150212 268f45cc-cd09-0410-ab3c-d52691b4dbfc